--- a/html-tab-completion-excercises.html
+++ b/html-tab-completion-excercises.html
@@ -64,7 +64,7 @@ tab completions. Specifics can be found here: https://www.sublimetext.com/docs/3
 	<!-- So I've got the following markup. Turns out this <ul> tag 
 	needs to be surrounded by a div with the class name
 	"my-class". Using a handy Sublime shortcut you may have learned 
-	in another lesson, place your cursor at the beginning of the line proceeding <ul>,
+	in another lesson, place your cursor at the beginning of the line preceding <ul>,
 	hit `Command + L` until you've selected the next line directly after </ul> (6 times by my count), then hit `Command + Control + W` and type div class="my-class".
 	Notice this shortcut automagically surrounds the selected markup in a <div>
 	and properly adds the class to just the opening tag. Neat, huh? -->
