--- a/intermediate-II-text-editing-exercises.html
+++ b/intermediate-II-text-editing-exercises.html
@@ -21,8 +21,8 @@ Key
 	- go ahead and try to see what I mean!
 
 		Instead, copy the unordered list and use ⇧⌘V to paste it 
-	in the div. The markup will be automatically indented to
-	it's parent, or in this case the div! -->
+	in the div. The markup will be automatically indented relative to
+	its container -->
 							<ul>
 								<li></li>
 								<li></li>
