--- a/intermediate-II-text-editing-exercises.html
+++ b/intermediate-II-text-editing-exercises.html
@@ -14,8 +14,8 @@ Key
 <!-- Exercise 2: 		⌘KBACKSPACE  Delete from cursor to start of line  -->
 	USE ⌘KK TO DELETE THE TEXT IN CAPS! =>| Here is some text we want to keep.
 
-<!-- Exercise 3:    ⇧⌘V  Paste and indent correctly  -->
-	<!-- 
+<!-- Exercise 3:    ⇧⌘V  Paste and indent correctly 
+
 		If you were to copy and past this unordered list
 	inside the div below, the formatting would be all screwy 
 	- go ahead and try to see what I mean!
