--- a/beginner-text-editing-exercises.html
+++ b/beginner-text-editing-exercises.html
@@ -10,7 +10,7 @@ Key
 <!-- Exercise 1: 			⌃⌘UP  	Move line/selection up -->
 	<h1>one</h1>
 	<h3>three</h3>
-	<h2>two</h2> <!-- try moving this entire line up one with ⌃⌘UP -->
+	<h2>two</h2> <!-- try moving this entire line up one with ⌃⌘UP You can move it back down with ⌃⌘DOWN -->
 
 <!-- Exercise 2: 			⌘X  		Cut line -->
 	<div>
