--- a/beginner-text-editing-exercises.html
+++ b/beginner-text-editing-exercises.html
@@ -10,9 +10,18 @@ Key
 <!-- Exercise 1: 			⌃⌘UP  	Move line/selection up -->
 	<h1>one</h1>
 	<h3>three</h3>
-	<h2>two</h2> <!-- try moving this entire line up one with ⌃⌘UP You can move it back down with ⌃⌘DOWN -->
+	<h2>two</h2> <!-- try moving this entire line up one with ⌃⌘UP -->
 
-<!-- Exercise 2: 			⌘X  		Cut line -->
+<!-- Exercise 2:  		⌃⌘DOWN  	Move line/selection down  -->
+	<div>
+		<span class="five"></span> <!-- hold ⌃⌘ and press the down arrow to move this line down -->
+		<span class="one"></span>
+		<span class="two"></span>
+		<span class="three"></span>
+		<span class="four"></span>
+	</div>
+
+<!-- Exercise 3: 			⌘X  		Cut line -->
 	<div>
 		<span class="cut-me-out">Lorem ipsum dolor sit amet</span> <!-- cut this line with ⌘X -->
 	</div>
@@ -20,32 +29,23 @@ Key
 	<div class="paste-in-here">
 	</div>  <!-- place your cursor here and paste using ⌘V -->
 
-<!-- Exercise 3: 			⌃⇧K 		Delete line -->
+<!-- Exercise 4: 			⌃⇧K 		Delete line -->
 	<div>
 		<span class="delete-me">Lorem ipsum dolor sit amet</span> <!-- delete this line with ⌃⇧K -->
 		<!-- ⌃⇧K will delete the the selected line or text without copying to your clipboard -->
 	</div>
 
-<!-- Exercise 4: 			⌘↵			Insert line after  -->
+<!-- Exercise 5: 			⌘↵			Insert line after  -->
 	<div>
 		<span class="one"></span> <!-- place your cursor on this line and hit ⌘↵ to insert a line below -->
 		<span class="three"></span>
 	</div>
 
 
-<!-- Exercise 5: 			⇧⌘↵ 		Insert line before  -->
+<!-- Exercise 6: 			⇧⌘↵ 		Insert line before  -->
 	<div>
 		<span class="one"></span> 
 		<span class="three"></span> <!-- place your cursor on this line and hit ⇧⌘↵ to insert a line above -->
-	</div>
-
-<!-- Exercise 6:  		⌃⌘DOWN  	Move line/selection down  -->
-	<div>
-		<span class="five"></span> <!-- hold ⌃⌘ and press the down arrow to move this line down -->
-		<span class="one"></span>
-		<span class="two"></span>
-		<span class="three"></span>
-		<span class="four"></span>
 	</div>
 
 
