--- a/html-tab-completion-excercises.html
+++ b/html-tab-completion-excercises.html
@@ -1,5 +1,18 @@
 <!-- Here are some of what I believe to be the most helpful default Sublime Text
-tab completions. Specifics can be found here: https://www.sublimetext.com/docs/3/auto_complete.html -->
+tab completions. Specifics can be found here: https://www.sublimetext.com/docs/3/auto_complete.html 
+
+Some clarification on key commands
+All of the keyboard shortcuts in these lessons involve at least one modifier key (Command ⌘, Control ^, etc) followed by predicate key which completes the shortcut and triggers the desired action.
+
+For example, let's take the shortcut ⌘X
+This means depress and hold the Command (⌘) modifier key and then press the letter 'X'.
+
+If you see ⌘KK or ⌘K⌘K, this means depress and hold Control (⌘) and press the letter 'K' twice.
+
+Should you come across several modifier keys such as ⌃⇧K
+then this means depress and hold Control (⌃), depress and hold Shift (⇧), then press the letter 'K'
+
+Each lesson should have a legend for the modifier keys as well as these instructions as a reminder. -->
 
 <!-- Exercise 1: HTML Boilerplate -->
 
