--- a/html-tab-completion-excercises.html
+++ b/html-tab-completion-excercises.html
@@ -1,6 +1,23 @@
 <!-- Here are some of what I believe to be the most helpful default Sublime Text
 tab completions. Specifics can be found here: https://www.sublimetext.com/docs/3/auto_complete.html -->
 
+
+/////////////////////////////////////////////////////////////////////////
+// Make sure your syntax is set to HTML or tab completion won't work.  //
+// You can tell the current syntax by checking bottom right            //
+// corner of your Sublime window. You can set the syntax with          //
+// `Command + Shift + P` then type html and select Set Syntax: HTML    //
+/////////////////////////////////////////////////////////////////////////
+
+
+Key
+⇧  Shift  
+⌥  Alt  
+⌃  Control 
+⌘  Command 
+↵  Enter 
+
+
 <!-- Exercise 1: HTML Boilerplate -->
 
 	<!-- Let's say you need to prototype an HTML index page real quick. 
@@ -17,18 +34,26 @@ tab completions. Specifics can be found here: https://www.sublimetext.com/docs/3
 	</body>
 	</html>
 
-	<!-- Or, you could do it the easy way. Place your cursor directly
-	under the arrow ↓ and hit TAB. (Note: make sure your syntax is set to HTML or PHP.
-	You can tell the current syntax by checking bottom right corner of your Sublime window. 
-	You can set the syntax with `Command + Shift + P` then type html and select Set Syntax: HTML) -->
 
-    <!--↓-->
-	html
-
-	<!-- Holy magic HTML boilerplate, Batman! -->
+<!-- Instead, let's use default Sublime Text	HTML tab completion.
+On the line below, type --> html <!-- and hit TAB -->
 
 
-<!-- Exercise 2: HTML tags -->
+
+
+
+
+
+<!-- Exercise 2: Lorem ipsum Boilerplate -->
+	<!-- On the line below, type --> lorem <!-- and hit TAB -->
+
+
+
+
+
+
+
+<!-- Exercise 3: HTML tags -->
 	<!-- Need a <div>? How about a <ul>? An <a> tag, maybe? Place your cursor directly 
 	after the following tags and hit TAB to see the magic. -->
 
@@ -50,25 +75,28 @@ tab completions. Specifics can be found here: https://www.sublimetext.com/docs/3
  	see a dropdown list with options to autocomplete that tag. -->
 
 
-<!-- Exercise 3: HTML tags w/classes -->
-	<!-- Say, I need a div with a class name of "quick-fast-now", immediately! 
-	Place your cursor directly under the arrow ↓ and hit TAB.-->
-				  <!--↓-->
-	div.quick-fast-now
 
-	<!-- You can do this with pretty much any HTML tag. 
-	Pro tip: use dots for classes and hash tags for ID's.
-	Go 'head, try a few below! -->
-	p#sAndQs
-	section#myId
-	ul.some-class
 
-<!-- Exercise 4: The amazing tag hug -->
+<!-- Exercise 4: HTML tags w/classes -->
+	<!-- Say, I need a div with a class name of "quick-fast-now", immediately! -->
+	<!-- On the line below, type --> div.quick-fast-now <!-- and hit TAB -->
+
+
+
+	<!-- Need an ID instead? There's a shortcut for that! -->
+	<!-- On the line below, type --> div#my-new-id <!-- and hit TAB -->
+
+
+
+
+<!-- Exercise 5: The amazing tag hug -->
 	<!-- So I've got the following markup. Turns out this <ul> tag 
 	needs to be surrounded by a div with the class name
 	"my-class". Using a handy Sublime shortcut you may have learned 
-	in another lesson, place your cursor at the beginning of the line preceding <ul>,
-	hit `Command + L` until you've selected the next line directly after </ul> (6 times by my count), then hit `Command + Control + W` and type div class="my-class".
+	in another lesson, place your cursor at the beginning of the line preceding the opening <ul> tag,
+	hit --> ⌘L <!-- until you've selected the next line directly after </ul> 
+	(6 times by my count), then use --> ⌘^W 
+	<!-- and type --> div class="my-class" <!--
 	Notice this shortcut automagically surrounds the selected markup in a <div>
 	and properly adds the class to just the opening tag. Neat, huh? -->
 
@@ -78,14 +106,14 @@ tab completions. Specifics can be found here: https://www.sublimetext.com/docs/3
 		<li></li>
 	</ul>
 
-<!-- Exercise 5: Closing tag shortcut -->
+<!-- Exercise 6: Closing tag shortcut -->
 	<!-- This has nothing to do with tab completion...but it's a helpful tool for 
 	dealing with HTML tags so I figured I'd throw it in this group of exercises.
 	Below I have an opening HTML tag and some text. Instead of manually typing
-	out the matching closing tag, try the key combination `Command + Option + .` --> 
+	out the matching closing tag, try the key combination --> ⌘⌥. 
 
 
-	<strong>So bold
+	<strong>So strong
 
 	<!-- Yeah..so what? It's just one tag, right? This works for nested tags, too!
 	To prove it hit `Command + Option + .` three times (or as many times as you have unclosed tags) -->
