make some updates to tab completion exercises

--- a/html-tab-completion-excercises.html
+++ b/html-tab-completion-excercises.html
@@ -67,13 +67,16 @@ On the line below, type --> html <!-- and hit TAB -->
  	section
 
  	<!-- A tags are purdy special. Hit TAB once to auto complete the tag. 
- 				 Hit TAB twice to enter the href. Hit TAB again to enter the link text! -->
- 	a
+ On the line below, type --> a <!-- and hit TAB. Then, hit TAB again to enter the href. Finally, hit TAB once more to enter the link text! -->
+ 
+
+
 
  	<!-- Some tags don't play nice, like header (<h1><h2>etc..) tags for example. If tab completion isn't
  	working for a particular tag try typing adding < and then typing the tag name. You should
- 	see a dropdown list with options to autocomplete that tag. -->
-
+ 	see a dropdown list with options to autocomplete that tag. 
+ 	On the line below, type <h1 then hit TAB -->
+ 	
 
 
 
@@ -94,9 +97,8 @@ On the line below, type --> html <!-- and hit TAB -->
 	needs to be surrounded by a div with the class name
 	"my-class". Using a handy Sublime shortcut you may have learned 
 	in another lesson, place your cursor at the beginning of the line preceding the opening <ul> tag,
-	hit --> ⌘L <!-- until you've selected the next line directly after </ul> 
-	(6 times by my count), then use --> ⌘^W 
-	<!-- and type --> div class="my-class" <!--
+	hit --> ⌘L <!-- until you've selected the line after the closing </ul> tag
+	(6 times by my count), then use --> ⌘^W <!-- and type --> div class="my-class" <!--
 	Notice this shortcut automagically surrounds the selected markup in a <div>
 	and properly adds the class to just the opening tag. Neat, huh? -->
 
