--- a/intermediate-text-editing-exercises.html
+++ b/intermediate-text-editing-exercises.html
@@ -43,7 +43,7 @@ Key
 
 <!-- Exercise 5: 		⌥⌘/  Block comment current selection  -->
 	<!-- 
-		This works best in syntaxes that have block comments, like JavaScript.
+		This only works for syntaxes that support block comments, like JavaScript.
 		Comment out the description of the following function but selecting 
 		the lines with descriptive text then using ⌥⌘/
 	-->
