uncomment key legend to make it stand out better

--- a/beginner-text-editing-exercises.html
+++ b/beginner-text-editing-exercises.html
@@ -1,12 +1,9 @@
-<!-- 
-Key
+Key Legend
 ⇧  Shift  
 ⌥  Alt  
 ⌃  Control 
 ⌘  Command 
 ↵  Enter 
--->
-
 <!-- Exercise 1: 			⌃⌘UP  	Move line/selection up -->
 	<h1>one</h1>
 	<h3>three</h3>
