--- a/intermediate-text-editing-exercises.html
+++ b/intermediate-text-editing-exercises.html
@@ -1,12 +1,9 @@
-<!-- 
-Key
+Key Legend
 ⇧  Shift  
 ⌥  Alt  
 ⌃  Control 
 ⌘  Command 
 ↵  Enter 
--->
-
 <!-- Exercise 1: 		⌘]  Indent current line(s)  -->
 	<ul>
 <li></li> <!-- use ⌘] to indent this line to match the other <li> -->
