--- a/other-text-command-exercises.html
+++ b/other-text-command-exercises.html
@@ -1,12 +1,9 @@
-<!-- 
-Key
+Key Legend
 ⇧  Shift  
 ⌥  Alt  
 ⌃  Control 
 ⌘  Command 
 ↵  Enter 
--->
-
 
 <!-- Exercise 1: 		⇧⌘J  Select current indentation  
  	This command will select everything at and within the 
