--- a/html-tab-completion-excercises.html
+++ b/html-tab-completion-excercises.html
@@ -10,7 +10,8 @@ tab completions. Specifics can be found here: https://www.sublimetext.com/docs/3
 /////////////////////////////////////////////////////////////////////////
 
 
-Key
+Legend
+---------
 ⇧  Shift  
 ⌥  Alt  
 ⌃  Control 
