--- a/beginner-text-editing-exercises.html
+++ b/beginner-text-editing-exercises.html
@@ -1,9 +1,12 @@
-Key Legend
+Legend
+---------
 ⇧  Shift  
 ⌥  Alt  
 ⌃  Control 
 ⌘  Command 
-↵  Enter 
+↵  Enter  
+
+
 <!-- Exercise 1: 			⌃⌘UP  	Move line/selection up -->
 	<h1>one</h1>
 	<h3>three</h3>
