--- a/intermediate-II-text-editing-exercises.html
+++ b/intermediate-II-text-editing-exercises.html
@@ -1,12 +1,10 @@
-<!-- 
-Key
+Legend
+---------
 ⇧  Shift  
 ⌥  Alt  
 ⌃  Control 
 ⌘  Command 
 ↵  Enter 
-
--->
 
 <!-- Exercise 1: 		⌘KK  Delete from cursor to end of line  -->
 	Here is some text we want to keep. |<= USE ⌘KK TO DELETE THE TEXT IN CAPS!
