--- a/intermediate-text-editing-exercises.html
+++ b/intermediate-text-editing-exercises.html
@@ -1,9 +1,12 @@
-Key Legend
+Legend
+---------
 ⇧  Shift  
 ⌥  Alt  
 ⌃  Control 
 ⌘  Command 
-↵  Enter 
+↵  Enter  
+
+
 <!-- Exercise 1: 		⌘]  Indent current line(s)  -->
 	<ul>
 <li></li> <!-- use ⌘] to indent this line to match the other <li> -->
