--- a/other-text-command-exercises.html
+++ b/other-text-command-exercises.html
@@ -1,9 +1,10 @@
-Key Legend
+Legend
+---------
 ⇧  Shift  
 ⌥  Alt  
 ⌃  Control 
 ⌘  Command 
-↵  Enter 
+↵  Enter  
 
 <!-- Exercise 1: 		⇧⌘J  Select current indentation  
  	This command will select everything at and within the 
