--- a/text-manipulation-exercises.html
+++ b/text-manipulation-exercises.html
@@ -1,12 +1,10 @@
-<!-- 
-Key
+Legend
+---------
 ⇧  Shift  
 ⌥  Alt  
 ⌃  Control 
 ⌘  Command 
 ↵  Enter 
-
--->
 
 <!-- Exercise 1: 		⌘KU  Transform to uppercase -->
 	select this line of text and use ⌘KU to make it all uppercase
