add note about h1..h6 tab completion regression bug in st build 3081

--- a/html-tab-completion-excercises.html
+++ b/html-tab-completion-excercises.html
@@ -73,12 +73,14 @@ On the line below, type --> html <!-- and hit TAB -->
 
 
 
- 	<!-- Some tags don't play nice, like header (<h1><h2>etc..) tags for example. If tab completion isn't
- 	working for a particular tag try typing adding < and then typing the tag name. You should
+ 	<!-- There is a regression bug in Sublime Text version 3081 
+ 	and tab completion for some tags (h1..h6 tags for example) 
+ 	fail to work as expected. 
+		If tab completion isn't working for a particular tag try 
+	first typing < and then typing the tag name. You should
  	see a dropdown list with options to autocomplete that tag. 
- 	On the line below, type <h1 then hit TAB -->
+ 	On the line below, type <h1 then hit TAB. -->
  	
-
 
 
 <!-- Exercise 4: HTML tags w/classes -->
