edit last lesson with better language and example

--- a/html-tab-completion-excercises.html
+++ b/html-tab-completion-excercises.html
@@ -120,7 +120,7 @@ On the line below, type --> html <!-- and hit TAB -->
 
 	<strong>So strong
 
-	<!-- Yeah..so what? It's just one tag, right? This works for nested tags, too!
-	To prove it hit `Command + Option + .` three times (or as many times as you have unclosed tags) -->
+	<!-- Yeah..so what? It's just one tag, right? This works for multiple nested tags, too!
+	To prove it use --> ⌘⌥. <!-- to close each unclosed tag below. Sublime Text will add closing tags in the correct order. -->
 
-	<div><ul><li>Ima list item!
+	<div><ul><li>Hold ⌘⌥ and hit . three times to close these three unclosed tags!
