--- a/html-tab-completion-excercises.html
+++ b/html-tab-completion-excercises.html
@@ -58,22 +58,22 @@ On the line below, type --> html <!-- and hit TAB -->
 	<!-- Need a <div>? How about a <ul>? An <a> tag, maybe? Place your cursor directly 
 	after the following tags and hit TAB to see the magic. -->
 
-	div
-	p
-	button
-	ul
- 	php
- 	script
- 	link
+	<div></div>
+	<p></p>
+	<button></button>
+	<ul></ul>
+ 	php	 <!-- you might need to set your syntax to php for this one to work -->
+ 	<script type="text/javascript"></script>
+ 	<link rel="stylesheet" type="text/css" href="">
  	section
 
- 	<!-- A tags are purdy special. Hit TAB once to auto complete the tag. 
+ 	<!-- A tags are purdy special. 
  On the line below, type --> a <!-- and hit TAB. Then, hit TAB again to enter the href. Finally, hit TAB once more to enter the link text! -->
  
 
 
 
- 	<!-- There is a regression bug in Sublime Text version 3081 
+ 	<!-- There is a regression in Sublime Text version 3081 
  	and tab completion for some tags (h1..h6 tags for example) 
  	fail to work as expected. 
 		If tab completion isn't working for a particular tag try 
